--- a/styles/style.css
+++ b/styles/style.css
@@ -13,19 +13,360 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  position: relative;
+  align-items: center;
+  overflow: hidden;
+  display: flex;
   /* parameters for the header section */
+}
+
+.logo {
+  width: 154px;
+  height: 31px;
+  background-size: cover;
+  background-position: center;
+
+
+}
+
+.logo_place_header {
+  position: absolute;
+  margin-left: 30px;
+  top: 30px;
+  height: 31px;
+  width: 200px;
+  background-image: url(../images/logo_place_header.png);
+}
+
+.header__title {
+  width: 730px;
+  margin-left: 64px;
+  position:relative;
+  z-index: 1;
+  font-weight: normal;
+  line-height: 96px;
+  font-size: 102px;
+}
+
+.header__subtitle{
+  line-height: 25px;
+  font-size: 18px;
+  width: 388px;
+  position: absolute;
+  bottom:30px;
+  z-index: 1;
+  margin:0;
+  left: 64px;
+  font-weight: normal;
+ 
+  
+
 }
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  position: absolute;
+  background-color: #2F80ED;
+  top: 64px;
+  right: 0;
+  
 }
 
-/* including elements with key-value modifiers */
-.table__cell_theme_dark {
-  width: 200px;
+.header__main-illustration{
+width: 765px;
+height: 608px;
+background-image: url(../images/header-image.png);
+position: absolute;
+background-size: cover;
+bottom: 0;
+right: 0;
+background-position: center;
+}
+
+
+
+.description{
+  margin-top: 100px;
+}
+
+.two-columns{
+  display:flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: 0 auto;
+
+  
+}
+
+.two-columns__brief{
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+  color: #2F80ED;
+
+}
+
+.two-columns__main-text{
+  width: 80%;
+  min-width: 784px;
+
+}
+
+
+.two-columns__paragraph{
+  line-height: 34px;
+  font-size: 24px;
+  margin: 30px 0 0;
+  
+}
+
+
+.two-columns__span-accent{
+  font-weight: bold;
+}
+
+
+.two-columns__paragraph:first-of-type {
+  margin-top: 0;
+}
+
+
+.digits{
+  margin-top: 100px;
+  margin-bottom: 100px;
+
+}
+
+.section-title{
+  text-align: center;
+  font-size: 60px;
+  margin: 0;
+  padding: 0 20%;
+  font-weight: bold;
+
+}
+
+.section-subtitle{
+  text-align: center;
+  font-size: 24px;
+  line-height: 34px;
+  margin: 20px 0 0;
+  padding: 0 20px;
+
+
+}
+
+.table {
+  margin: auto;
+  display:flex;
+  justify-content: space-between;
+  align-content: space-between;
+  flex-wrap: wrap;
+  width: 1100px;
+}
+
+
+.table__cell{
+  width: 250px;
+  margin-top: 60px;
+
+}
+
+.table__heading{
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+  line-height: 1.15;
+
+
+}
+
+.table__text{
+  font-size: 18px;
+  margin: 20px 0 0;
+  line-height: 1.2;
+}
+
+
+.feynman{
+  padding-top: 100px;
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-size: 867px 637px;
+  background-position: bottom left;
+  height: 790px;
+  background-repeat: no-repeat;
+  position: relative;
+
+  
+
+
+}
+
+.feynman__title{
+  text-align: center;
+  width: 775px;
+  margin: 0 auto;
+  font-size: 120px;
+  font-weight: bold;
+  line-height: 1.15;
+
+}
+
+.feynman__subtitle{
+  text-align: center;
+  margin: 0 auto;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+
+}
+
+.feynman__link{
+  position: absolute;
+  font-size: 36px;
+  line-height: 51px;
+  right: 48px;
+  
+
+}
+
+.kaufman{
+  background-color: #1f1f1f;
+  padding: 90px 0;
+  position: relative;
+  overflow: hidden;
   color: white;
+  
+}
+
+
+.section-title_theme_dark {
+  color: white;
+  position: relative;
+  z-index: 1;
+}
+
+
+.section-subtitle_theme_dark {
+  color: white;
+  position: relative;
+  z-index: 1;
+}
+
+.table_theme_dark {
+  width: 1100px;
+  margin: 0 auto;
+  justify-content: space-between;
+  align-content: space-between;
+  position: relative;
+  z-index: 1;
+
+}
+
+.table__cell_theme_dark{
+  width: 200px;
   margin-right: 0;
   margin-top: 80px;
 }
+
+.kaufman__triangle{
+position:absolute;
+right: -210px;
+background-image: url(../images/kaufman-triangle.svg);
+background-position: center;
+background-size: contain;
+width: 877px;
+height: 877px;
+top:0;
+background-repeat: no-repeat;
+z-index: 0;
+overflow: hidden;
+animation: rotation linear 20s infinite;
+
+  }
+
+  .footer{
+  background-color: #1f1f1f;
+  min-height: 350px;
+  padding: 60px 0 40px;
+  box-sizing: border-box;
+  }
+
+  .logo_place_footer {
+    background-image: url(../images/logo_place_footer.png);
+  }
+
+  .footer__columns{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+  }
+
+  .footer__column{
+    min-height: 252px;
+    display: block;
+  }
+
+
+  .footer__column-heading{
+    line-height: 30px;
+    font-size: 18px;
+    color: #ffffff;
+    margin-bottom: 20px;
+    margin: 0;
+    font-weight: bold;
+    
+    
+    
+  }
+
+  .footer__column-links{
+    padding: 0;
+  }
+
+  .footer__column_content_copyright{
+    flex-basis: 711px;
+    position: relative;
+  }
+
+  .footer__author{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    line-height: 25px;
+    color: #444444;
+    font-size: 18px;
+  }
+
+  .footer__link{
+    text-decoration: none;
+    line-height: 30px;
+    color: #444444;
+    font-size: 18px;
+
+  }
+
+  .footer__social-icon{
+    margin-right: 10px;
+  }
+
+  .footer__list-column-links{
+    display: block;
+    margin: 0;
+    line-height: 30px;
+    font-weight: 18px;
+  }
+
+  .footer__link:hover{
+    opacity: .6;
+  }
+
+
+
