--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,16 @@
+@keyframes rotation {
+  from{
+    transform: rotate(20deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .page {
   min-width: 1100px;
-  /* we don't know how to make mobile versions of websites yet, */
-  /* so here we've set a minimum page width */
   max-width: 1600px;
-  /* here we've set a maximum page width */
   margin: 0 auto;
-  /* this ensures that all content is centered on screens wider than 1600px */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
@@ -14,11 +19,10 @@
   min-height: 600px;
   max-height: 756px;
   background-color: #f2f2f2;
-  position: relative;
-  align-items: center;
   overflow: hidden;
   display: flex;
-  /* parameters for the header section */
+  align-items: center;
+  position: relative;
 }
 
 .logo {
@@ -26,13 +30,11 @@
   height: 31px;
   background-size: cover;
   background-position: center;
-
-
 }
 
 .logo_place_header {
   position: absolute;
-  margin-left: 30px;
+  left: 64px;
   top: 30px;
   height: 31px;
   width: 200px;
@@ -40,13 +42,15 @@
 }
 
 .header__title {
-  width: 730px;
+  max-width: 730px;
   margin-left: 64px;
-  position:relative;
   z-index: 1;
-  font-weight: normal;
+  font-weight: bold;
   line-height: 96px;
   font-size: 102px;
+  padding:0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .header__subtitle{
@@ -59,34 +63,35 @@
   margin:0;
   left: 64px;
   font-weight: normal;
- 
-  
-
 }
 
-/* here we have two examples of selectors in order to remind you how to set styles for elements */
+.header__link{
+  color: #2F80ED;
+  font-weight: normal;
+  text-decoration: none;
+}
+
 .header__square-pic {
   height: 568px;
   width: 568px;
   position: absolute;
   background-color: #2F80ED;
-  top: 64px;
+  margin-top: 64px;
   right: 0;
-  
+  transform: rotate(-15deg);
+  animation: rotation linear 20s infinite;
 }
 
 .header__main-illustration{
-width: 765px;
-height: 608px;
-background-image: url(../images/header-image.png);
-position: absolute;
-background-size: cover;
-bottom: 0;
-right: 0;
-background-position: center;
+  width: 765px;
+  height: 608px;
+  background-image: url(../images/header-image.png);
+  position: absolute;
+  background-size: cover;
+  bottom: 0;
+  right: 0;
+  background-position: center;
 }
-
-
 
 .description{
   margin-top: 100px;
@@ -97,8 +102,6 @@ background-position: center;
   justify-content: space-between;
   width: 80%;
   margin: 0 auto;
-
-  
 }
 
 .two-columns__brief{
@@ -108,38 +111,30 @@ background-position: center;
   font-weight: normal;
   margin: 0;
   color: #2F80ED;
-
 }
 
 .two-columns__main-text{
   width: 80%;
   min-width: 784px;
-
 }
-
 
 .two-columns__paragraph{
   line-height: 34px;
   font-size: 24px;
   margin: 30px 0 0;
-  
 }
-
 
 .two-columns__span-accent{
   font-weight: bold;
 }
 
-
 .two-columns__paragraph:first-of-type {
   margin-top: 0;
 }
 
-
 .digits{
   margin-top: 100px;
   margin-bottom: 100px;
-
 }
 
 .section-title{
@@ -148,7 +143,6 @@ background-position: center;
   margin: 0;
   padding: 0 20%;
   font-weight: bold;
-
 }
 
 .section-subtitle{
@@ -157,8 +151,6 @@ background-position: center;
   line-height: 34px;
   margin: 20px 0 0;
   padding: 0 20px;
-
-
 }
 
 .table {
@@ -170,11 +162,9 @@ background-position: center;
   width: 1100px;
 }
 
-
 .table__cell{
   width: 250px;
   margin-top: 60px;
-
 }
 
 .table__heading{
@@ -182,8 +172,6 @@ background-position: center;
   font-weight: bold;
   margin: 0;
   line-height: 1.15;
-
-
 }
 
 .table__text{
@@ -192,20 +180,15 @@ background-position: center;
   line-height: 1.2;
 }
 
-
 .feynman{
   padding-top: 100px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-size: 867px 637px;
   background-position: bottom left;
-  height: 790px;
+  min-height: 790px;
   background-repeat: no-repeat;
   position: relative;
-
-  
-
-
 }
 
 .feynman__title{
@@ -215,25 +198,25 @@ background-position: center;
   font-size: 120px;
   font-weight: bold;
   line-height: 1.15;
-
 }
 
 .feynman__subtitle{
   text-align: center;
-  margin: 0 auto;
+  margin-top: 70px;
   font-size: 36px;
   font-weight: normal;
   line-height: 51px;
-
 }
 
 .feynman__link{
   position: absolute;
   font-size: 36px;
-  line-height: 51px;
+  line-height: 50px;
   right: 48px;
-  
-
+  font-weight: normal;
+  text-decoration: none;
+  color: #2F80ED;
+  top: 50%;
 }
 
 .kaufman{
@@ -242,16 +225,13 @@ background-position: center;
   position: relative;
   overflow: hidden;
   color: white;
-  
 }
-
 
 .section-title_theme_dark {
   color: white;
   position: relative;
   z-index: 1;
 }
-
 
 .section-subtitle_theme_dark {
   color: white;
@@ -266,107 +246,281 @@ background-position: center;
   align-content: space-between;
   position: relative;
   z-index: 1;
-
+  color: white;
 }
 
 .table__cell_theme_dark{
   width: 200px;
   margin-right: 0;
   margin-top: 80px;
+  color: white;
 }
 
 .kaufman__triangle{
-position:absolute;
-right: -210px;
-background-image: url(../images/kaufman-triangle.svg);
-background-position: center;
-background-size: contain;
-width: 877px;
-height: 877px;
-top:0;
-background-repeat: no-repeat;
-z-index: 0;
-overflow: hidden;
-animation: rotation linear 20s infinite;
-
+  position:absolute;
+  right: -124px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-position: center;
+  background-size: contain;
+  width: 636px;
+  height: 660px;
+  top:0;
+  background-repeat: no-repeat;
+  z-index: 0;
+  overflow: hidden;
+  animation: rotation linear 20s infinite; 
   }
 
-  .footer{
+.footer{
   background-color: #1f1f1f;
   min-height: 350px;
   padding: 60px 0 40px;
   box-sizing: border-box;
   }
 
-  .logo_place_footer {
-    background-image: url(../images/logo_place_footer.png);
+.logo_place_footer {
+  background-image: url(../images/logo_place_footer.png);
   }
 
-  .footer__columns{
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
+.footer__columns{
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
   }
 
-  .footer__column{
-    min-height: 252px;
-    display: block;
-  }
-
-
-  .footer__column-heading{
-    line-height: 30px;
-    font-size: 18px;
-    color: #ffffff;
-    margin-bottom: 20px;
-    margin: 0;
-    font-weight: bold;
-    
-    
-    
-  }
-
-  .footer__column-links{
-    padding: 0;
-  }
-
-  .footer__column_content_copyright{
-    flex-basis: 711px;
-    position: relative;
-  }
-
-  .footer__author{
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    line-height: 25px;
-    color: #444444;
-    font-size: 18px;
-  }
-
-  .footer__link{
-    text-decoration: none;
-    line-height: 30px;
-    color: #444444;
-    font-size: 18px;
-
-  }
-
-  .footer__social-icon{
-    margin-right: 10px;
-  }
-
-  .footer__list-column-links{
-    display: block;
-    margin: 0;
-    line-height: 30px;
-    font-weight: 18px;
-  }
-
-  .footer__link:hover{
-    opacity: .6;
+.footer__column{
+  min-height: 252px;
+  display: block;
   }
 
 
+.footer__column-heading{
+  line-height: 30px;
+  font-size: 18px;
+  color: #ffffff;
+  margin-bottom: 20px;
+  margin: 0;
+  font-weight: bold;
+  }
 
+.footer__column-links{
+  padding: 0;
+  }
+
+.footer__column_content_copyright{
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  }
+
+.footer__author { 
+  line-height: 25px;
+  color: #ffffff;
+  font-size: 18px;
+  }
+
+.footer__link{
+  font-weight: normal;
+  line-height: 30px;
+  color: #ffffff;
+  font-size: 18px;
+  padding:0;
+  list-style: none;
+  text-decoration: none;
+  }
+
+.footer__social-icon{
+  margin-right: 10px;
+  }
+
+.footer__list-column-links{
+  display: block;
+  margin: 0;
+  line-height: 30px;
+  font-weight: 18px;
+  }
+
+.footer__link:hover{
+  opacity: .6;
+  }
+
+  .techniques {
+    width: 80%;
+    margin: 100px auto 0;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: 0 auto;
+  align-content: space-between;
+}
+
+.cards__item {
+  width: 240px;
+  margin-right: 100px;
+  margin-top: 60px;
+}
+
+.cards__title {
+  font-size: 24px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.cards__description{
+  line-height: 23px;
+  font-size: 18px;
+  margin: 16px 0 0;
+  text-align: center;
+}
+
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  margin: auto;
+  background-size: cover;
+  background-position: center;
+  display: block;
+}
+
+.video {
+  width: 80%;
+  margin: 100px auto 0;
+}
+
+.video__iframe {
+  width: 515px;
+  height: 316px;
+  margin-right: 20px;
+}
+
+.video__iframes {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: 50px;
+}
+
+.oakley {
+  background-color: #F2F2F2;
+  padding: 160px 0 0;
+  position: relative;
+  z-index: -1;
+}
+
+.khan {
+  margin-top: 100px;
+  background-color: #F2F2F2; 
+  padding-top: 105px;
+}
+
+.khan__container {
+  width: 80%;
+  margin: auto;
+}
+
+.khan__author {
+  font-size: 30px;
+  line-height: 42px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.khan__title {
+  font-size: 60px;
+  font-weight: bold;
+  line-height: 1.15;
+  margin: 0;
+}
+
+.khan__quote {
+  line-height: 34px;
+  font-size: 24px;
+  margin: 55px 0 0;
+  width: 790px;
+  font-weight: normal;
+}
+
+
+.khan__quote-author {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 36px;
+}
+
+.khan__book-container {
+  margin-top: 68px;
+  display: flex;
+}
+
+.khan__quote-author-subline {
+  font-size: 24px;
+  margin: 10px 0 0;
+  font-weight: normal;
+  line-height: 1.15;
+}
+
+.khan__book-pic {
+  height: 608px;
+  width: 620px;
+  background-image: url(../images/khan-book-2.png);
+  background-size: cover;
+  background-position: 0 0;
+}
+
+.khan__buy-link {
+  line-height: 42px;
+  font-size: 30px;
+  text-decoration: none;
+  color: #2F80ED;
+  margin-left: 48px;
+  transition: opacity .2s linear;
+}
+
+.khan__buy-link:hover {
+  opacity: .6;
+}
+
+.resources {
+  margin-top: 100px;
+}
+
+.resources__logo {
+  width: 270px;
+  height: 38px;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.resources__logo-zone {
+  width: 1100px;
+  margin: 80px auto 100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  min-height: 155px;
+  align-content: space-between;
+}
+
+.resources__logo_ted{
+  background-image: url(../logo/resources-tedED.png);
+}
+
+.resources__logo_medium{
+  background-image: url(../logo/resources-Medium.png);
+}
+
+.resources__logo_dezeen{
+  background-image: url(../logo/resources-dezeen.png);
+}
+
+.resources__logo_goodreads{
+  background-image: url(../logo/resources-goodreads.png);
+}
